chore: update dependencies and refactor Tailwind CSS integration

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-      <section id="hero" class="bg-gradient-to-br from-blue-50 to-blue-100">
+      <section id="hero" class="bg-linear-to-br from-blue-50 to-blue-100">
         <div class="mx-auto max-w-5xl px-4 py-20 text-center">
           <h2 class="mb-4 text-4xl font-extrabold">HTML + CSS + Tailwind</h2>
           <p class="mb-8 text-lg text-gray-600">
@@ -37,15 +37,15 @@
       <section id="cards" class="mx-auto max-w-5xl px-4 py-16">
         <h3 class="mb-8 text-2xl font-bold">Secciones</h3>
         <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-          <article class="rounded-2xl border bg-white p-6 shadow-sm">
+          <article class="rounded-2xl border bg-white p-6 shadow-xs">
             <h4 class="mb-2 font-semibold">HTML Semántico</h4>
             <p class="text-sm text-gray-600">Estructura base, etiquetas y accesibilidad.</p>
           </article>
-          <article class="rounded-2xl border bg-white p-6 shadow-sm">
+          <article class="rounded-2xl border bg-white p-6 shadow-xs">
             <h4 class="mb-2 font-semibold">CSS y Layout</h4>
             <p class="text-sm text-gray-600">Box model, Flexbox y Grid para componer páginas.</p>
           </article>
-          <article class="rounded-2xl border bg-white p-6 shadow-sm">
+          <article class="rounded-2xl border bg-white p-6 shadow-xs">
             <h4 class="mb-2 font-semibold">Tailwind CSS</h4>
             <p class="text-sm text-gray-600">Clases utilitarias, responsive y buenas prácticas.</p>
           </article>
