chore: update project configuration for Vite and Tailwind CSS

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sesión 1 - HTML + CSS + Tailwind</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./src/main.css" />
   </head>
   <body class="min-h-screen bg-gray-50 text-gray-800">
     <header class="border-b bg-white">
-      <div class="mx-auto flex max-w-5xl items-center justify-between px-4 py-4">
+      <div
+        class="mx-auto flex max-w-5xl items-center justify-between px-4 py-4"
+      >
         <h1 class="text-xl font-bold">Mini Curso Web — Sesión 1</h1>
-        <nav class="flex gap-4"> 
+        <nav class="flex gap-4">
           <a class="hover:text-blue-600" href="#hero">Inicio</a>
           <a class="hover:text-blue-600" href="#cards">Contenido</a>
           <a class="hover:text-blue-600" href="#footer">Contacto</a>
@@ -23,7 +25,8 @@
         <div class="mx-auto max-w-5xl px-4 py-20 text-center">
           <h2 class="mb-4 text-4xl font-extrabold">HTML + CSS + Tailwind</h2>
           <p class="mb-8 text-lg text-gray-600">
-            Repaso esencial y primeras utilidades en Tailwind para maquetar rápido.
+            Repaso esencial y primeras utilidades en Tailwind para maquetar
+            rápido.
           </p>
           <a
             href="#cards"
@@ -39,15 +42,21 @@
         <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
           <article class="rounded-2xl border bg-white p-6 shadow-xs">
             <h4 class="mb-2 font-semibold">HTML Semántico</h4>
-            <p class="text-sm text-gray-600">Estructura base, etiquetas y accesibilidad.</p>
+            <p class="text-sm text-gray-600">
+              Estructura base, etiquetas y accesibilidad.
+            </p>
           </article>
           <article class="rounded-2xl border bg-white p-6 shadow-xs">
             <h4 class="mb-2 font-semibold">CSS y Layout</h4>
-            <p class="text-sm text-gray-600">Box model, Flexbox y Grid para componer páginas.</p>
+            <p class="text-sm text-gray-600">
+              Box model, Flexbox y Grid para componer páginas.
+            </p>
           </article>
           <article class="rounded-2xl border bg-white p-6 shadow-xs">
             <h4 class="mb-2 font-semibold">Tailwind CSS</h4>
-            <p class="text-sm text-gray-600">Clases utilitarias, responsive y buenas prácticas.</p>
+            <p class="text-sm text-gray-600">
+              Clases utilitarias, responsive y buenas prácticas.
+            </p>
           </article>
         </div>
       </section>
